README File Added

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <p class="text-sm text-postTertiary cursor-pointer">Contact Us</p>
           </div>
           <div class="socials space-y-3">
-            <div class="flex justify-end items-baseline space-x-4 md:space-x-4">
+            <div class="flex justify-end items-center space-x-4 md:space-x-4">
               <img src="/assets/images/icon-twitter.svg" alt="" class="ficon" />
               <img
                 src="/assets/images/icon-instagram.svg"
@@ -299,21 +299,21 @@
           <div class="logo-dev flex justify-between">
             <img src="/assets/images/logo.svg" alt="logo" class="w-12 h-12" />
             <div class="socials space-y-3">
-              <div class="flex justify-end space-x-4 md:space-x-4">
+              <div class="flex justify-end space-x-3 md:space-x-4">
                 <img
                   src="/assets/images/icon-twitter.svg"
-                  alt=""
-                  class="ficon"
+                  alt="icon-twitter-logo"
+                  class="ficon w-5 h-5"
                 />
                 <img
                   src="/assets/images/icon-instagram.svg"
-                  alt=""
-                  class="ficon"
+                  alt="instagram-logo"
+                  class="ficon w-5 h-5"
                 />
                 <img
                   src="/assets/images/icon-facebook.svg"
-                  alt=""
-                  class="ficon"
+                  alt="facebook-logo"
+                  class="ficon w-5 h-5"
                 />
               </div>
               <div class="text-right text-xs font-medium">
